--- a/src/main/resources/ui/LineDialogView.fxml
+++ b/src/main/resources/ui/LineDialogView.fxml
@@ -27,7 +27,7 @@
    <children>
        <Label prefHeight="25.0" prefWidth="57.0" text="Method:" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
        <Button fx:id="buttonCancel" mnemonicParsing="false" text="Cancel" GridPane.halignment="CENTER" GridPane.rowIndex="8" GridPane.valignment="CENTER" />
-       <Button fx:id="buttonOk" mnemonicParsing="false" text="Draw" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="8" GridPane.valignment="CENTER" />
+       <Button fx:id="buttonDraw" onAction="#draw" mnemonicParsing="false" text="Draw" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="8" GridPane.valignment="CENTER" />
       <FlowPane prefHeight="89.0" prefWidth="119.0" GridPane.columnIndex="1">
          <children>
             <RadioButton mnemonicParsing="false" text="Parametric">
