--- a/src/main/resources/ui/LineDialogView.fxml
+++ b/src/main/resources/ui/LineDialogView.fxml
@@ -11,14 +11,14 @@
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints maxHeight="87.0" minHeight="10.0" prefHeight="55.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="72.0" minHeight="10.0" prefHeight="49.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="72.0" minHeight="10.0" prefHeight="57.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="72.0" minHeight="10.0" prefHeight="57.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="72.0" minHeight="10.0" prefHeight="57.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="72.0" minHeight="10.0" prefHeight="57.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="72.0" minHeight="10.0" prefHeight="57.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="72.0" minHeight="10.0" prefHeight="57.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="87.0" minHeight="10.0" prefHeight="65.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="72.0" minHeight="10.0" prefHeight="60.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="72.0" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="72.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="72.0" minHeight="10.0" prefHeight="57.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="72.0" minHeight="10.0" prefHeight="57.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="72.0" minHeight="10.0" prefHeight="57.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="72.0" minHeight="10.0" prefHeight="57.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     </rowConstraints>
     <padding>
@@ -27,86 +27,95 @@
    <children>
        <Label prefHeight="25.0" prefWidth="57.0" text="Method:" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
        <Button fx:id="buttonCancel" mnemonicParsing="false" text="Cancel" GridPane.halignment="CENTER" GridPane.rowIndex="8" GridPane.valignment="CENTER" />
-       <Button fx:id="buttonDraw" onAction="#draw" mnemonicParsing="false" text="Draw" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="8" GridPane.valignment="CENTER" />
-      <FlowPane prefHeight="89.0" prefWidth="119.0" GridPane.columnIndex="1">
-         <children>
-            <RadioButton mnemonicParsing="false" text="Parametric">
-               <padding>
-                  <Insets top="5.0" />
-               </padding>
-            </RadioButton>
-            <RadioButton mnemonicParsing="false" text="Bresenham">
-               <padding>
-                  <Insets top="5.0" />
-               </padding>
-            </RadioButton>
-         </children>
-      </FlowPane>
-      <Label prefHeight="25.0" prefWidth="86.0" text="Coordinates:" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-      <FlowPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-         <children>
-            <GridPane prefHeight="60.0" prefWidth="115.0">
-              <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="55.0" minWidth="10.0" prefWidth="26.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="55.0" minWidth="10.0" prefWidth="44.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="73.0" minWidth="10.0" prefWidth="46.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <Label text="P1:" />
-                  <TextField prefHeight="25.0" prefWidth="30.0" GridPane.columnIndex="1">
-                     <GridPane.margin>
-                        <Insets right="2.0" />
-                     </GridPane.margin>
-                  </TextField>
-                  <TextField GridPane.columnIndex="2" />
-                  <TextField GridPane.columnIndex="1" GridPane.rowIndex="1">
-                     <GridPane.margin>
-                        <Insets right="2.0" />
-                     </GridPane.margin>
-                  </TextField>
-                  <TextField GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                  <Label text="P2:" GridPane.rowIndex="1" />
-               </children>
-            </GridPane>
-         </children>
-      </FlowPane>
-      <Label prefHeight="25.0" prefWidth="80.0" text="Color start:" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-      <ColorPicker GridPane.columnIndex="1" GridPane.rowIndex="2" />
-      <Label prefHeight="25.0" prefWidth="71.0" text="Color end:" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
-      <ColorPicker GridPane.columnIndex="1" GridPane.rowIndex="3" />
-      <Label prefHeight="25.0" prefWidth="69.0" text="Type line:" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER" />
-      <ComboBox prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-      <Label prefHeight="25.0" prefWidth="93.0" text="Type bound:" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="CENTER" />
-      <FlowPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
-         <children>
-            <RadioButton mnemonicParsing="false" prefHeight="18.0" prefWidth="85.0" text="4X" />
-            <RadioButton mnemonicParsing="false" prefHeight="18.0" prefWidth="70.0" text="8X">
-               <FlowPane.margin>
-                  <Insets top="5.0" />
-               </FlowPane.margin>
-            </RadioButton>
-         </children>
-      </FlowPane>
-      <Label prefHeight="25.0" prefWidth="93.0" text="Brush form:" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER" />
-      <FlowPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
-         <children>
-            <RadioButton mnemonicParsing="false" text="Square">
-               <FlowPane.margin>
-                  <Insets top="5.0" />
-               </FlowPane.margin>
-            </RadioButton>
-            <RadioButton mnemonicParsing="false" text="Circle">
-               <FlowPane.margin>
-                  <Insets top="5.0" />
-               </FlowPane.margin>
-            </RadioButton>
-         </children>
-      </FlowPane>
-      <Label prefHeight="25.0" prefWidth="93.0" text="Brush size:" GridPane.halignment="CENTER" GridPane.rowIndex="7" GridPane.valignment="CENTER" />
-      <Slider GridPane.columnIndex="1" GridPane.rowIndex="7" />
+       <Button fx:id="buttonDraw" mnemonicParsing="false" onAction="#draw" text="Draw" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="8" GridPane.valignment="CENTER" />
+       <FlowPane prefHeight="89.0" prefWidth="119.0" GridPane.columnIndex="1">
+           <fx:define>
+               <ToggleGroup fx:id="methodToggleGroup"/>
+           </fx:define>
+           <children>
+               <RadioButton mnemonicParsing="false" text="Parametric" fx:id="methodParametric" toggleGroup="$methodToggleGroup">
+                   <padding>
+                       <Insets top="5.0" />
+                   </padding>
+               </RadioButton>
+               <RadioButton mnemonicParsing="false" text="Bresenham" fx:id="methodBresenham" toggleGroup="$methodToggleGroup">
+                   <padding>
+                       <Insets top="5.0" />
+                   </padding>
+               </RadioButton>
+           </children>
+       </FlowPane>
+       <Label prefHeight="25.0" prefWidth="86.0" text="Coordinates:" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+       <FlowPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+          <children>
+              <GridPane prefHeight="60.0" prefWidth="115.0">
+                  <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="55.0" minWidth="10.0" prefWidth="26.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="55.0" minWidth="10.0" prefWidth="44.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="73.0" minWidth="10.0" prefWidth="46.0" />
+                  </columnConstraints>
+                  <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  </rowConstraints>
+                  <children>
+                      <Label text="P1:" />
+                      <TextField fx:id="p1xTextField" prefHeight="25.0" prefWidth="30.0" GridPane.columnIndex="1">
+                          <GridPane.margin>
+                              <Insets right="2.0" />
+                          </GridPane.margin>
+                      </TextField>
+                      <TextField fx:id="p1yTextField" GridPane.columnIndex="2" />
+                      <TextField fx:id="p2xTextField" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                          <GridPane.margin>
+                              <Insets right="2.0" />
+                          </GridPane.margin>
+                      </TextField>
+                      <TextField fx:id="p2yTextField" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                      <Label text="P2:" GridPane.rowIndex="1" />
+                  </children>
+              </GridPane>
+          </children>
+       </FlowPane>
+       <Label prefHeight="25.0" prefWidth="80.0" text="Color start:" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+       <ColorPicker fx:id="colorPickerStart" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+       <Label prefHeight="25.0" prefWidth="71.0" text="Color end:" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
+       <ColorPicker fx:id="colorPickerEnd" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+       <Label prefHeight="25.0" prefWidth="69.0" text="Type line:" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER" />
+       <ComboBox fx:id="typeLineBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+       <Label prefHeight="25.0" prefWidth="93.0" text="Type bound:" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="CENTER" />
+       <FlowPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+           <fx:define>
+               <ToggleGroup fx:id="boundToggleGroup"/>
+           </fx:define>
+          <children>
+              <RadioButton fx:id="bound4xRadio" mnemonicParsing="false" prefHeight="18.0" prefWidth="85.0" text="4X" toggleGroup="$boundToggleGroup" />
+              <RadioButton fx:id="bound8xRadio" mnemonicParsing="false" prefHeight="18.0" prefWidth="70.0" text="8X" toggleGroup="$boundToggleGroup">
+                  <FlowPane.margin>
+                      <Insets top="5.0" />
+                  </FlowPane.margin>
+              </RadioButton>
+          </children>
+       </FlowPane>
+       <Label prefHeight="25.0" prefWidth="93.0" text="Brush form:" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER" />
+       <FlowPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
+           <fx:define>
+               <ToggleGroup fx:id="formToggleGroup"/>
+           </fx:define>
+          <children>
+              <RadioButton fx:id="squareFormButton" mnemonicParsing="false" prefHeight="18.0" prefWidth="83.0" text="Square" toggleGroup="$formToggleGroup">
+                  <FlowPane.margin>
+                      <Insets top="5.0" />
+                  </FlowPane.margin>
+              </RadioButton>
+              <RadioButton fx:id="circleFormButton" mnemonicParsing="false" prefHeight="18.0" prefWidth="87.0" text="Circle" toggleGroup="$formToggleGroup">
+                  <FlowPane.margin>
+                      <Insets top="5.0" />
+                  </FlowPane.margin>
+              </RadioButton>
+          </children>
+       </FlowPane>
+       <Label prefHeight="25.0" prefWidth="93.0" text="Brush size:" GridPane.halignment="CENTER" GridPane.rowIndex="7" GridPane.valignment="CENTER" />
+       <Slider fx:id="brushSizeSlider" GridPane.columnIndex="1" GridPane.rowIndex="7" />
    </children>
 </GridPane>
