--- a/src/main/resources/ui/LineDialogView.fxml
+++ b/src/main/resources/ui/LineDialogView.fxml
@@ -116,6 +116,6 @@
           </children>
        </FlowPane>
        <Label prefHeight="25.0" prefWidth="93.0" text="Brush size:" GridPane.halignment="CENTER" GridPane.rowIndex="7" GridPane.valignment="CENTER" />
-       <Slider fx:id="brushSizeSlider" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+       <Slider fx:id="brushSizeSlider" GridPane.columnIndex="1" GridPane.rowIndex="7" min="1" max="10" />
    </children>
 </GridPane>
