--- a/src/main/resources/ui/CircleDialogView.fxml
+++ b/src/main/resources/ui/CircleDialogView.fxml
@@ -27,15 +27,18 @@
     <children>
         <Label prefHeight="25.0" prefWidth="57.0" text="Method:" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
         <Button fx:id="buttonCancel" mnemonicParsing="false" text="Cancel" GridPane.halignment="CENTER" GridPane.rowIndex="8" GridPane.valignment="CENTER" />
-        <Button fx:id="buttonDraw" onAction="#draw" mnemonicParsing="false" text="Draw" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="8" GridPane.valignment="CENTER" />
+        <Button fx:id="buttonDraw" mnemonicParsing="false" onAction="#draw" text="Draw" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="8" GridPane.valignment="CENTER" />
         <FlowPane prefHeight="89.0" prefWidth="119.0" GridPane.columnIndex="1">
+            <fx:define>
+                <ToggleGroup fx:id="methodToggleGroup"/>
+            </fx:define>
             <children>
-                <RadioButton mnemonicParsing="false" text="Parametric">
+                <RadioButton mnemonicParsing="false" text="Parametric" fx:id="methodParametric" toggleGroup="$methodToggleGroup">
                     <padding>
                         <Insets top="5.0" />
                     </padding>
                 </RadioButton>
-                <RadioButton mnemonicParsing="false" text="Bresenham">
+                <RadioButton mnemonicParsing="false" text="Bresenham" fx:id="methodBresenham" toggleGroup="$methodToggleGroup">
                     <padding>
                         <Insets top="5.0" />
                     </padding>
@@ -44,29 +47,35 @@
         </FlowPane>
         <Label prefHeight="25.0" prefWidth="86.0" text="Coordinates:" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
         <Label prefHeight="25.0" prefWidth="44.0" text="Color:" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
-        <ColorPicker GridPane.columnIndex="1" GridPane.rowIndex="3" />
+        <ColorPicker fx:id="figureColor" GridPane.columnIndex="1" GridPane.rowIndex="3" />
         <Label prefHeight="25.0" prefWidth="52.0" text="Figure:" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER" />
-        <ComboBox prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-        <Label prefHeight="25.0" prefWidth="93.0" text="Type bound:" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="CENTER" />
+        <ComboBox fx:id="figureBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+        <!--<Label prefHeight="25.0" prefWidth="93.0" text="Type bound:" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="CENTER" />
         <FlowPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+            <fx:define>
+                <ToggleGroup fx:id="boundToggleGroup"/>
+            </fx:define>
             <children>
-                <RadioButton mnemonicParsing="false" prefHeight="18.0" prefWidth="85.0" text="4X" />
-                <RadioButton mnemonicParsing="false" prefHeight="18.0" prefWidth="70.0" text="8X">
+                <RadioButton fx:id="bound4xRadio" mnemonicParsing="false" prefHeight="18.0" prefWidth="85.0" text="4X" toggleGroup="$boundToggleGroup"/>
+                <RadioButton fx:id="bound8xRadio" mnemonicParsing="false" prefHeight="18.0" prefWidth="70.0" text="8X" toggleGroup="$boundToggleGroup">
                     <FlowPane.margin>
                         <Insets top="5.0" />
                     </FlowPane.margin>
                 </RadioButton>
             </children>
-        </FlowPane>
+        </FlowPane>-->
         <Label prefHeight="25.0" prefWidth="93.0" text="Brush form:" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER" />
-        <FlowPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
+        <FlowPane prefHeight="200.0" prefWidth="160.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
+            <fx:define>
+                <ToggleGroup fx:id="formToggleGroup"/>
+            </fx:define>
             <children>
-                <RadioButton mnemonicParsing="false" text="Square">
+                <RadioButton fx:id="squareFormButton" mnemonicParsing="false" prefHeight="18.0" prefWidth="100.0" text="Square" toggleGroup="$formToggleGroup">
                     <FlowPane.margin>
                         <Insets top="5.0" />
                     </FlowPane.margin>
                 </RadioButton>
-                <RadioButton mnemonicParsing="false" text="Circle">
+                <RadioButton fx:id="circleFormButton" mnemonicParsing="false" prefHeight="18.0" prefWidth="100.0" text="Circle" toggleGroup="$formToggleGroup">
                     <FlowPane.margin>
                         <Insets top="5.0" />
                     </FlowPane.margin>
@@ -74,9 +83,9 @@
             </children>
         </FlowPane>
         <Label prefHeight="25.0" prefWidth="93.0" text="Brush size:" GridPane.halignment="CENTER" GridPane.rowIndex="7" GridPane.valignment="CENTER" />
-        <Slider GridPane.columnIndex="1" GridPane.rowIndex="7" />
+        <Slider fx:id="brushSizeSlider" GridPane.columnIndex="1" GridPane.rowIndex="7" min="1" max="10" />
       <Label prefHeight="25.0" prefWidth="53.0" text="Radius:" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-      <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" />
+      <TextField fx:id="rTextField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
       <GridPane prefHeight="63.0" prefWidth="98.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -86,12 +95,12 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <TextField>
+            <TextField fx:id="xTextField">
                <GridPane.margin>
                   <Insets right="2.0" />
                </GridPane.margin>
             </TextField>
-            <TextField GridPane.columnIndex="1" />
+            <TextField fx:id="yTextField" GridPane.columnIndex="1" />
          </children>
       </GridPane>
     </children>
