--- a/src/main/resources/ui/CurveDialogView.fxml
+++ b/src/main/resources/ui/CurveDialogView.fxml
@@ -1,46 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="218.0" prefWidth="258.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sadvit.dialog.CurveDialogController">
+<GridPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="215.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sadvit.dialog.CurveDialogController">
     <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="85.0" minWidth="10.0" prefWidth="83.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="99.0" minWidth="10.0" prefWidth="90.0" />
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints maxHeight="72.0" minHeight="10.0" prefHeight="57.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="72.0" minHeight="10.0" prefHeight="57.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="72.0" minHeight="10.0" prefHeight="57.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="72.0" minHeight="10.0" prefHeight="57.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="72.0" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="76.0" minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="72.0" minHeight="10.0" prefHeight="51.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="72.0" minHeight="0.0" prefHeight="33.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="57.0" minHeight="10.0" prefHeight="38.0" vgrow="SOMETIMES" />
     </rowConstraints>
     <padding>
         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
     </padding>
    <children>
        <Button fx:id="buttonCancel" mnemonicParsing="false" text="Cancel" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER" />
-       <Button fx:id="buttonDraw" onAction="#draw" mnemonicParsing="false" text="OK" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER" />
+       <Button fx:id="buttonDraw" mnemonicParsing="false" onAction="#draw" text="Draw" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER" />
        <Label prefHeight="25.0" prefWidth="44.0" text="Color:" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-       <ColorPicker GridPane.columnIndex="1" />
+       <ColorPicker prefHeight="25.0" prefWidth="150.0" GridPane.columnIndex="1" />
        <Label prefHeight="25.0" prefWidth="83.0" text="Curve type:" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
        <ComboBox prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
        <Label prefHeight="25.0" prefWidth="93.0" text="Brush form:" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
        <FlowPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
-          <children>
-              <RadioButton mnemonicParsing="false" text="Square">
-                  <FlowPane.margin>
-                      <Insets top="5.0" />
-                  </FlowPane.margin>
-              </RadioButton>
-              <RadioButton mnemonicParsing="false" text="Circle">
-                  <FlowPane.margin>
-                      <Insets top="5.0" />
-                  </FlowPane.margin>
-              </RadioButton>
-          </children>
+           <fx:define>
+               <ToggleGroup fx:id="formToggleGroup"/>
+           </fx:define>
+           <children>
+               <RadioButton fx:id="squareFormButton" mnemonicParsing="false" prefHeight="18.0" prefWidth="100.0" text="Square" toggleGroup="$formToggleGroup">
+                   <FlowPane.margin>
+                       <Insets top="5.0" />
+                   </FlowPane.margin>
+               </RadioButton>
+               <RadioButton fx:id="circleFormButton" mnemonicParsing="false" prefHeight="18.0" prefWidth="100.0" text="Circle" toggleGroup="$formToggleGroup">
+                   <FlowPane.margin>
+                       <Insets top="5.0" />
+                   </FlowPane.margin>
+               </RadioButton>
+           </children>
        </FlowPane>
        <Label prefHeight="25.0" prefWidth="93.0" text="Brush size:" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
        <Slider GridPane.columnIndex="1" GridPane.rowIndex="3" />
